scrollbar and vuln fix

--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,11 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background: #53cbc9;
+  background: #000000;
   z-index: 1;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #e1147b;
-  border-radius: 5px;
+  background: #505050;
+  border-radius: 3px;
 }
